# rust-lsp-mcp

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  agents-core.md  docker-compose.yml  env.sample  index.md  pyproject.toml
.bob/: custom_modes.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: index.md
docs/conventions/: agents-md-layout.md  caching.md  claude-md-layout.md  documentation-writing.md  grill-me.md  implementation-cycle.md  index.md  lifecycle.md  phasal-plan.md  research-policy.md  verification-pass.md  working-style.md
docs/guide/: agentic-coding.md  architecture.md  components.md  configuration.md  dependencies.md  development.md  index.md  tools.md
docs/handoff/: adversarial-review.md  bob-port-phase-1.md  bob-port-phase-3.md  bob-port-progress.md  bob-port-verification.md  continue.md  defect-sweep-resolution-handoff.md  index.md  phase-0-foundation.md  phase-1-docker-verification.md  phase-1-readiness.md  phase-2-resolution.md  phase-3-4-tools.md  phase-5-doc-rag.md  post-sweep-followups-handoff.md  progress.md  roles.md
docs/impl/: index.md  known-issues.md
docs/planning/: bob-harness-port.md  implementation-plan.md  index.md  planning-handoff.md  repo-agnostic-and-docker-launch.md
docs/reference/: bob-harness-capabilities.md  chromadb-default-embedder.md  devcontainer-features.md  index.md  lsp-position-encoding.md  mcp-inspector.md  mcp-python-sdk-server.md  multilspy-readiness.md  multilspy-rust-backend-audit.md  pydantic-settings.md  pytest-markers.md  ruff-config.md  ty-vscode-setup.md  uv-packaging-ci.md
scripts/: clone-ripgrep.sh  init.sh  prime-cache.sh  setup.sh  teardown.sh
tests/: conftest.py  test_analyzer_error_state.py  test_doc_chunking.py  test_doc_store.py  test_document_symbols.py  test_ds01_path_containment.py  test_ds02_output_containment.py  test_ds09_selection_range.py  test_env_sample_honesty.py  test_find_references.py  test_goto_definition.py  test_hover.py  test_infra_scripts.py  test_ki5_position_encoding.py  test_ki9_delegate_teardown.py  test_lifecycle_races.py  test_lifespan_startup.py  test_phase1_fast.py  test_phase1_integration.py  test_phase2_fast.py  test_phase2_integration.py  test_phase34_adversarial.py  test_phase34_delegates.py  test_phase34_integration.py  test_phase5_integration.py  test_refresh.py  test_search_docs.py  test_settings_aliases.py  test_smoke.py  test_status.py  test_tool_registration.py  test_validate_file_path.py  test_version.py
(+34 files in other folders)
